--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Your Website</title>
 </head>
@@ -16,9 +17,9 @@
 			</ul>
 		</nav>
 	</header>
-	
+
 	<section>
-	
+
 		<article>
 			<header>
 				<h2>Article title</h2>
@@ -26,7 +27,7 @@
 			</header>
 			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
 		</article>
-		
+
 		<article>
 			<header>
 				<h2>Article title</h2>
@@ -34,7 +35,7 @@
 			</header>
 			<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
 		</article>
-		
+
 	</section>
 
 	<aside>
