--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li>Your menu</li>
+				<li>This page is created for testing purposes in order to learn Git.</li>
 			</ul>
 		</nav>
 	</header>
